--- a/m2w1.md
+++ b/m2w1.md
@@ -1,15 +1,24 @@
 Reflect on your habits from last module. What behaviors and activities were helpful for you? What activities and behaviors could be more effective for you? What processes would you like to try differently this module to become more effective at your work and as a software developer?
 
-Last module I did a good job building a healthy and productive work schedule.
+Last module I did a good job building a healthy and productive work schedule. This module I want to continue the trend that I set in enjoying the tough work.
 
 Setting intentions for this module: who do I want to be this module? What specific habits would help me get there? How are those habits tied to the identity of a software developer?
 
+I would love to become more accostomed to working for very short amounts of time and be as productive immediately as I am once I 'get going.'
+
 Incorporate temptation bundling to create a new habit by using this template:
 
-After [CURRENT HABIT], I will [HABIT I NEED TO DO].
-After [HABIT I NEED], I will [HABIT I WANT TO DO].
+After eating dinner, I will sit at my desk and finish one more step in my current project.
+After taking out the trash, I will review and respond to slack messages for the evening.
+
 How to enjoy “hard” habits: Reframe your habits to consider their benefits rather than their drawbacks; name 3 habits that you have to do and explain the benefits of them. How do they further your goals longterm? How will they add to your processes as a successful developer? At the end of the day, how do they add to your life?
+
+One of my hard habits has been to pull away from writing code to think in more of a big picture. It can be hard when I am on a roll to break and look at the larger picture, but at the end of the day this is a great skill to have as a software developer. Another habit that goes with this is on the opposite end, if I am stuck looking at the big picture without making any progress, It is important then to jump in and just start coding. There is no use in getting stuck before diving in, and just the act of attempting something can often illuminate parts of the big picture that were inaccessible before.
 
 Environment design (optional 5-min. additional reading: Motivation is Overvalued. Environment Often Matters More): how does your environment set-up currently help you with your habits? How could it be improved to make it easier for you to follow through on your habits?
 
+Accessibility and desiribility are the two key words that I use to drive the organization of my environment. If I feel at peace and easily able to jump into my work environment, I feel a much greater drive to keep myself accountable for my habits.
+
 “When you start a new habit, it should take less than two minutes to do.” Read this 4-min article on how to stop procrastinating. Apply the 2-minute rule to reframe 2-3 of your habits by scaling them down into the 2-minute version. How does this reframing help you think about shaping your new identity as a software developer?
+
+Honestly, this is how I have always approached working with myself and my habits. Until something becomes fun for me, I have to be realistic in my approach to adopting a new habit or technique. It always starts as work, so chunking it into exceptionally manageable time segments is the first step in making it work.
