--- a/m2w2.md
+++ b/m2w2.md
@@ -3,13 +3,14 @@ Assess your habits from week 1: how did you spend your time this past week? What
 
 Write a draft of your professional story here as 1-2 paragraphs. Focus on answering the questions who are you, why are you here, and what’s next? Consider how to talk about your motives and values, the turning points that led to your career change, and what you envision for yourself going forward.
 
-I come from a background of live circus performance. I would work between the realms of an artist and a filmmaker, allowing artists to translate their visions into film, without sacrificing a live audience. So many of our stories, work, and information can be limited by the mediums through which they are portrayed, and I work to allow bring the best qualities of a medium forward.
+I come from a background of live circus performance where I would work between the realms of an artist and a filmmaker, translating artists' visions into film. So many of our stories and projects can be limited by the mediums through which they are portrayed, and I work to help other people's work shine. 
 
-I saw that live performance 
+I bring the technical knowledge to folks who need someone to help make their ideas a reality. My background in navigating the application of experiences and stories into logical and formulaic models without losing the heart of those ideas drives my desire to become a better software developer.
 
-me- bg live circus performance as a filmmaker- working with artists of another medium to elevate their art using mine. mutual respect and shining in the context of theirs. A new medium to help other people's work shine - formulaic ideas, logical and probelm solving skills
 
 help other reveal their talents and acheive their potential. injecting human spirit into programming culture- marrying math with art/beauty something to spread through programming
+
+
 
 Update your LinkedIn profile with the following: updated photo/headshot, headline, summary statement using your story, and Turing added to your experience and education sections. Include a link to your profile here in the journal. Remember the guidelines and tips from the lesson here.
 
