--- a/m2w2.md
+++ b/m2w2.md
@@ -15,3 +15,5 @@ help other reveal their talents and acheive their potential. injecting human spi
 Update your LinkedIn profile with the following: updated photo/headshot, headline, summary statement using your story, and Turing added to your experience and education sections. Include a link to your profile here in the journal. Remember the guidelines and tips from the lesson here.
 
 What other steps will you take this week to update your branding or practice your story?
+
+Communicating with other folks and hearing their stories gives me a good basis for the style and language I should use to present mine.
