--- a/m2w3.md
+++ b/m2w3.md
@@ -1,1 +1,24 @@
+Assess your habits from week 2: how did you spend your time this past week? What was effective in your habits? What could be more effective? What steps will you take to make that happen?
 
+Using the right tools is an important part of my job search. Too often I get bogged down by browsing for jobs on sites like indeed, and that is not the most effective use of my time.
+
+When have you been excited, focused, and enjoyed your work? When have you felt bored, restless, or unhappy? When do you feel energized in your work? When is your energy drained?
+
+I have been most excited and focused when I am working on a specific feature of a project collaboratively with other people. When we have the planning all done, and are implementing the feature, that is when I most enjoy coding. I definitely start to feel drained when we continue working on the project's code, but when we have not crafted a vision of what it will look like when we are finished.
+
+Applying wayfinding to using job search resources
+Go through the resources listed here and explore 2-3 tools. List what you looked at here:
+
+Link Up, Ruby Now, Glass Door, LinkedIn connections.
+
+Apply wayfinding: of what you looked at, what did you discover that aligns with your vision? If it didn’t align with your vision, what will you try next? Decide what tools to bookmark to explore later.
+
+I think that one of the most important parts of the job search to me, will be establishing connections to people who work at companies that look appealing. Much like when I was doing grant writing, if the application is my only point of contact with a company, then there is almost no point in applying.
+
+Find a job posting that aligns with your vision. What’s the posting? How does it align with what you’re looking for? Add it to your Huntr.
+
+It is about crafting educational resources for kids- teaching them how to code.
+
+What next steps will you take to explore that opportunity and find contacts? Add that information to your Huntr card.
+
+I want to reach out to someone at the company, and learn more about how they work.
