--- a/m2w4.md
+++ b/m2w4.md
@@ -1,1 +1,21 @@
 
+Prepare for Job Experience: AEIOU
+Activities: what questions do you have about the activities that a software developer does on a daily basis?
+
+I asked about how a software developer asks questions.
+
+Environment: what questions do you have about the overall environment and culture of this workplace?
+
+For the most part, I wanted to ask how they deal with things when unpleasant situations arise etc... As far as day-to-day work, I was interested in how work gets assigned/ what opportunities they have to decide twhat they work on.
+
+Interactions: what questions do you have about the team at this company? What do you hope to learn during this experience?
+
+After the Job Experience, reflect on the same questions; what are your takeaways from the activity?
+
+For the most part, my takeaways are about how job-satisfaction is directly proportional to workplace communication. Maddie seemed fully content with how they work, and they were able to point to several times that they asked for direction/help in a way that told me what to ask before commiting to a company.
+
+Habits:
+
+I have been slacking on taking poms. I can tell from my frustration levels in recent mod2 projects. I think I need to reevaluate how I approach poms. Recently the code has been more complicated, and I have found myself thinking about poms, but passing up on them because 30 minutes is not enough time often to solve a problem. That being said, I am going to more seriously take them every 45-60 minutes.
+
+I don't like the paperclip method, or anything else that gives me a 'visual' cue for my progress. I would rather become someone who innately uses habit to my advantage. That being said, I have started setting timers, which to me feels like a good medium between 'rewarding' my acountability, and 'reminding' myself aboiut it.
