--- a/m2w5.md
+++ b/m2w5.md
@@ -3,11 +3,29 @@ Mind Maps:
 
 i. Engagement. What did you reflect on last week in regards to when you’re engaged in your work at Turing? Pull out an idea that resonates with you most (e.g., “Talking through a problem with a partner,” “The moment when I solve a problem that I previously didn’t know how to do,” “Setting up a successful project management process for my team”) and break that idea down into parts and make a list (what are all the steps that go into that moment? When do you get to use your strengths? What is fun about this?).
 
+My idea about what resonates with me the most, has to do with my career before Turing. I love being able to provide a sense of wonderment, awe, and most of all magic to someone when they don't expect it. Here is what goes into that:
+
+When I see something, a feature, an idea, or whatever it is, I want to be prepared to run with it and prepare enough to go into it at a full charge.
+
+Often times, there is something conceptually simple, but difficult to implement. I love to provide the answer to the question of whether that is possible.
+
+In my days as a circus performer, magician, and film editor, ther was a mantra that permeated through most of how I dedicated myself to my work. The more work that I put in, the less everbody else sees. I mean this in the best possible way. If the end result is clean, elegant, and effective, nobody needs to see the miles of mud that were slogged through to get there. I love providing the bookends of that path, and I feel such a sense of accomplishment from being able to save someone else from walking where I was able to carve my way.
+
 ii. Energy. What did you reflect on last week in regards to when you feel most energized in your work at Turing? Pull out an idea that resonates with you most and break that idea down into parts and make a list (what are all the steps that go into that moment? When do you get to use your strengths? What is fun about this?).
+
+Same as above.
 
 iii. Flow. When have you had an experience recently in which you were in a state of flow? You can also think about this as “joy” or “play.” Pull out an idea that resonates with you most and break that idea down into parts and make a list (what are all the steps that go into that moment? When do you get to use your strengths? What is fun about this?).
 
+I strongly believe that my best work happens when I am in a state of 'play.' Being able to channel dedication to try anything, and not cement down on a singular direction allows the best environment for working, and the best environment for working usually leads to the most productive work.
+
+A recent example comes to mind in the last group project for this mod. We were stuck on implementing a feature, and while we were mapping out how to proceed, I started to refactor html code into partials. By breaking down the code into more and more partials (too many as one member of my group mentioned), I was more clearly able to examine the connections between what we were doing. From there, it was simple to see where the best place to implement the beforementioned feature would be.
+
+The 'fun'-ness of this comes from starting on something fun, and then applying that to be productive.
+
 Prototype your mind maps: what do these mind maps tell you about what’s important to you as a software developer? What questions do they bring up about what you still want to learn about this career?
+
+I one hundred percent want to be involved in work where I can still play and have fun. 
 
 Prototype your outreach: (Be prepared to share this in your small group discussion)
 
@@ -15,12 +33,6 @@ Who comes to mind as a person you can reach out to? Why that person? What questi
 How would this outreach help you further your job search strategy?
 Outreach & Networking Plan: Based on your reflections above, create a concrete plan for your outreach:
 
-Who is the right person for you to reach out to?
-How will you find them? How do you know they’re the right person?
-How will you reach out?
-What questions do you need to ask them?
-How will you use this information to further your solution?
-How will you follow up?
-Execute your plan:
+In reaching out to people I have started a list, based on the excel sheet provided during the pd. I have many soft connections, or weak-ties as named in this work, from college when most of my friends went in to engineering. My careers before this were also mainly about self advertising, so I am good at reaching out to people, not precisely cold, but more like chilly, where we have been acquainted in the past, but never really talked 1 on 1.
 
-Reach out to your contact THIS WEEK. If possible, reach out to more than one person OR find a meetup to attend also. What happened? What other next steps should you take? If this is a person connected to a company you’re interested in, be sure to add it to your Huntr card.
+I have a starting list of eight folks, who I plan on asking eacvh of them if they have any recommendations for other people to reach out to. Using that, I want to grow my network through the soft contacts.
